# Rox

./: .gitignore  Cargo.toml
examples/: small_test.rox  test.rox
src/: interp.rs  main.rs
src/canon/: mod.rs  resolve_deps.rs  scoping.rs
src/codegen/: compile.rs  exe.rs  inst.rs  mod.rs
src/ir/: annotations.rs  ast.rs  mod.rs
src/parsing/: parsing.rs  tokenization.rs
src/runtime/: builtins.rs  mod.rs  vm.rs
src/typing/: mod.rs  typecheck.rs  value_type.rs
src/util/: byte_reader.rs  errors.rs  iter.rs  mod.rs  ptr.rs  structures.rs
